misc/kubernetes/strelka-namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: strelka
  labels: 
    name: strelka
