misc/kubernetes/strelka-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: strelka
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          strelka.network/strelka_net: "true"
  podSelector:
    matchLabels:
      strelka.network/strelka_net: "true"
